adding auth with google and github

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 GOOGLE_CLIENT_ID = 250064536509-hssa9118li180j4heh93l5pgo3n58h4k.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
+GITHUB_CLIENT_ID = 97ef5ee80c5706fd1b64
+GITHUB_CLIENT_SECRET = e8ee9b0f2114d6b89c95bce9e08916009262db6a
 NEXTAUTH_SECRET = "0a39bcead10827febb3ea5515f036eeb"
 NEXTAUTH_URL = "http://localhost:3000"
