--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.3",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "nextjs-progressbar": "^0.0.16",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
