--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-use": "^17.4.0",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
