--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webchat",
-  "version": "0.1.0",
+  "version": "1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.0",
     "@next/font": "13.1.6",
     "@stitches/react": "^1.2.8",
     "axios": "^1.3.3",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "nextjs-progressbar": "^0.0.16",
@@ -19,12 +21,15 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-icons": "^4.7.1",
     "react-use": "^17.4.0",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
